[gd_scene load_steps=9 format=4 uid="uid://os11wp7o8snp"]

[ext_resource type="Script" uid="uid://dy0ftj4mijq5n" path="res://overlay_screens/game_over_screen_success.gd" id="1_kwkda"]
[ext_resource type="TileSet" uid="uid://c4yumyregri21" path="res://stage/tiles/stage_tiles.tres" id="2_tqa8g"]
[ext_resource type="Texture2D" uid="uid://crqlae4p2dfho" path="res://stage/detail_background/grass_tuft.png" id="3_8mmng"]
[ext_resource type="Texture2D" uid="uid://cq618thcflnhw" path="res://stage/detail_background/pine_tree.png" id="4_yojhd"]
[ext_resource type="SpriteFrames" uid="uid://c1ixp61icsh68" path="res://player/sprite/deer_frames.tres" id="5_tqa8g"]

[sub_resource type="Gradient" id="Gradient_hihea"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u2cwq"]
gradient = SubResource("Gradient_hihea")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="LabelSettings" id="LabelSettings_18qa3"]
font_size = 24

[node name="GameOverScreenSuccess" type="Node2D"]
script = ExtResource("1_kwkda")

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAUAAAAAAAIAAAABAAUAAAAAAAIAAAACAAUAAAAAAAIAAAADAAUAAAAAAAIAAAAEAAUAAAAAAAIAAAAFAAUAAAAAAAIAAAAGAAUAAAAAAAIAAAAHAAUAAAAAAAIAAAAIAAUAAAAAAAIAAAAJAAUAAAAAAAIAAAAKAAUAAAAAAAIAAAALAAUAAAAAAAIAAAALAAYAAAAAAAIAAAAKAAYAAAAAAAIAAAAJAAYAAAAAAAIAAAAIAAYAAAAAAAIAAAAHAAYAAAAAAAIAAAAGAAYAAAAAAAIAAAAFAAYAAAAAAAIAAAAEAAYAAAAAAAIAAAADAAYAAAAAAAIAAAACAAYAAAAAAAIAAAABAAYAAAAAAAIAAAAAAAYAAAAAAAIAAAAAAAQAAAAAAAIAAAABAAQAAAAAAAIAAAACAAQAAAAAAAIAAAADAAQAAAAAAAIAAAAEAAQAAAAAAAIAAAAFAAQAAAAAAAIAAAAGAAQAAAAAAAIAAAAHAAQAAAAAAAIAAAAIAAQAAAAAAAIAAAAJAAQAAAAAAAIAAAAKAAQAAAAAAAIAAAALAAQAAAAAAAIAAAALAAcAAAAAAAIAAAAKAAcAAAAAAAIAAAAJAAcAAAAAAAIAAAAIAAcAAAAAAAIAAAAHAAcAAAAAAAIAAAAGAAcAAAAAAAIAAAAFAAcAAAAAAAIAAAAEAAcAAAAAAAIAAAADAAcAAAAAAAIAAAACAAcAAAAAAAIAAAABAAcAAAAAAAIAAAAAAAcAAAAAAAIAAAA=")
tile_set = ExtResource("2_tqa8g")

[node name="FloorDetail" type="TileMapLayer" parent="."]

[node name="Details" type="Node2D" parent="."]
y_sort_enabled = true

[node name="GrassTuft" type="Sprite2D" parent="Details"]
position = Vector2(88, 328)
texture = ExtResource("3_8mmng")

[node name="GrassTuft2" type="Sprite2D" parent="Details"]
position = Vector2(144, 328)
texture = ExtResource("3_8mmng")

[node name="GrassTuft3" type="Sprite2D" parent="Details"]
position = Vector2(136, 320)
texture = ExtResource("3_8mmng")

[node name="GrassTuft4" type="Sprite2D" parent="Details"]
position = Vector2(32, 320)
texture = ExtResource("3_8mmng")

[node name="GrassTuft5" type="Sprite2D" parent="Details"]
position = Vector2(192, 336)
texture = ExtResource("3_8mmng")

[node name="GrassTuft6" type="Sprite2D" parent="Details"]
position = Vector2(264, 328)
texture = ExtResource("3_8mmng")

[node name="GrassTuft7" type="Sprite2D" parent="Details"]
position = Vector2(320, 328)
texture = ExtResource("3_8mmng")

[node name="GrassTuft8" type="Sprite2D" parent="Details"]
position = Vector2(296, 328)
texture = ExtResource("3_8mmng")

[node name="GrassTuft9" type="Sprite2D" parent="Details"]
position = Vector2(368, 336)
texture = ExtResource("3_8mmng")

[node name="GrassTuft10" type="Sprite2D" parent="Details"]
position = Vector2(400, 328)
texture = ExtResource("3_8mmng")

[node name="GrassTuft11" type="Sprite2D" parent="Details"]
position = Vector2(432, 320)
texture = ExtResource("3_8mmng")

[node name="GrassTuft12" type="Sprite2D" parent="Details"]
position = Vector2(472, 312)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft13" type="Sprite2D" parent="Details"]
position = Vector2(448, 320)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft14" type="Sprite2D" parent="Details"]
position = Vector2(528, 304)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft15" type="Sprite2D" parent="Details"]
position = Vector2(504, 304)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft16" type="Sprite2D" parent="Details"]
position = Vector2(552, 296)
texture = ExtResource("3_8mmng")

[node name="GrassTuft17" type="Sprite2D" parent="Details"]
position = Vector2(648, 312)
texture = ExtResource("3_8mmng")

[node name="GrassTuft18" type="Sprite2D" parent="Details"]
position = Vector2(632, 304)
texture = ExtResource("3_8mmng")

[node name="GrassTuft19" type="Sprite2D" parent="Details"]
position = Vector2(608, 296)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft20" type="Sprite2D" parent="Details"]
position = Vector2(680, 320)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft21" type="Sprite2D" parent="Details"]
position = Vector2(712, 360)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft22" type="Sprite2D" parent="Details"]
position = Vector2(704, 400)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft23" type="Sprite2D" parent="Details"]
position = Vector2(672, 432)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft26" type="Sprite2D" parent="Details"]
position = Vector2(384, 360)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft27" type="Sprite2D" parent="Details"]
position = Vector2(376, 400)
texture = ExtResource("3_8mmng")
flip_h = true

[node name="GrassTuft28" type="Sprite2D" parent="Details"]
position = Vector2(392, 400)
texture = ExtResource("3_8mmng")

[node name="GrassTuft24" type="Sprite2D" parent="Details"]
position = Vector2(520, 440)
texture = ExtResource("3_8mmng")

[node name="GrassTuft25" type="Sprite2D" parent="Details"]
position = Vector2(608, 480)
texture = ExtResource("3_8mmng")

[node name="PineTree" type="Sprite2D" parent="Details"]
position = Vector2(32, 264)
texture = ExtResource("4_yojhd")

[node name="PineTree2" type="Sprite2D" parent="Details"]
position = Vector2(56, 296)
texture = ExtResource("4_yojhd")

[node name="PineTree3" type="Sprite2D" parent="Details"]
position = Vector2(96, 280)
texture = ExtResource("4_yojhd")

[node name="PineTree4" type="Sprite2D" parent="Details"]
position = Vector2(184, 296)
texture = ExtResource("4_yojhd")

[node name="PineTree5" type="Sprite2D" parent="Details"]
position = Vector2(144, 272)
texture = ExtResource("4_yojhd")

[node name="PineTree6" type="Sprite2D" parent="Details"]
position = Vector2(201, 273)
texture = ExtResource("4_yojhd")

[node name="PineTree7" type="Sprite2D" parent="Details"]
position = Vector2(225, 305)
texture = ExtResource("4_yojhd")

[node name="PineTree8" type="Sprite2D" parent="Details"]
position = Vector2(265, 289)
texture = ExtResource("4_yojhd")

[node name="PineTree35" type="Sprite2D" parent="Details"]
position = Vector2(17, 433)
texture = ExtResource("4_yojhd")

[node name="PineTree36" type="Sprite2D" parent="Details"]
position = Vector2(41, 465)
texture = ExtResource("4_yojhd")

[node name="PineTree37" type="Sprite2D" parent="Details"]
position = Vector2(81, 449)
texture = ExtResource("4_yojhd")

[node name="PineTree38" type="Sprite2D" parent="Details"]
position = Vector2(169, 465)
texture = ExtResource("4_yojhd")

[node name="PineTree39" type="Sprite2D" parent="Details"]
position = Vector2(129, 441)
texture = ExtResource("4_yojhd")

[node name="PineTree40" type="Sprite2D" parent="Details"]
position = Vector2(186, 442)
texture = ExtResource("4_yojhd")

[node name="PineTree41" type="Sprite2D" parent="Details"]
position = Vector2(210, 474)
texture = ExtResource("4_yojhd")

[node name="PineTree42" type="Sprite2D" parent="Details"]
position = Vector2(250, 458)
texture = ExtResource("4_yojhd")

[node name="PineTree9" type="Sprite2D" parent="Details"]
position = Vector2(353, 305)
texture = ExtResource("4_yojhd")

[node name="PineTree10" type="Sprite2D" parent="Details"]
position = Vector2(313, 281)
texture = ExtResource("4_yojhd")

[node name="PineTree11" type="Sprite2D" parent="Details"]
position = Vector2(377, 257)
texture = ExtResource("4_yojhd")

[node name="PineTree12" type="Sprite2D" parent="Details"]
position = Vector2(401, 289)
texture = ExtResource("4_yojhd")

[node name="PineTree13" type="Sprite2D" parent="Details"]
position = Vector2(441, 273)
texture = ExtResource("4_yojhd")

[node name="PineTree14" type="Sprite2D" parent="Details"]
position = Vector2(536, 256)
texture = ExtResource("4_yojhd")

[node name="PineTree16" type="Sprite2D" parent="Details"]
position = Vector2(592, 256)
texture = ExtResource("4_yojhd")

[node name="PineTree17" type="Sprite2D" parent="Details"]
position = Vector2(640, 264)
texture = ExtResource("4_yojhd")

[node name="PineTree18" type="Sprite2D" parent="Details"]
position = Vector2(688, 280)
texture = ExtResource("4_yojhd")

[node name="PineTree19" type="Sprite2D" parent="Details"]
position = Vector2(720, 312)
texture = ExtResource("4_yojhd")

[node name="PineTree20" type="Sprite2D" parent="Details"]
position = Vector2(744, 352)
texture = ExtResource("4_yojhd")

[node name="PineTree21" type="Sprite2D" parent="Details"]
position = Vector2(728, 400)
texture = ExtResource("4_yojhd")

[node name="PineTree22" type="Sprite2D" parent="Details"]
position = Vector2(696, 440)
texture = ExtResource("4_yojhd")

[node name="PineTree43" type="Sprite2D" parent="Details"]
position = Vector2(736, 464)
texture = ExtResource("4_yojhd")

[node name="PineTree44" type="Sprite2D" parent="Details"]
position = Vector2(608, 496)
texture = ExtResource("4_yojhd")

[node name="PineTree45" type="Sprite2D" parent="Details"]
position = Vector2(104, 496)
texture = ExtResource("4_yojhd")

[node name="PineTree46" type="Sprite2D" parent="Details"]
position = Vector2(744, 288)
texture = ExtResource("4_yojhd")

[node name="PineTree23" type="Sprite2D" parent="Details"]
position = Vector2(656, 464)
texture = ExtResource("4_yojhd")

[node name="PineTree47" type="Sprite2D" parent="Details"]
position = Vector2(760, 416)
texture = ExtResource("4_yojhd")

[node name="PineTree48" type="Sprite2D" parent="Details"]
position = Vector2(8, 272)
texture = ExtResource("4_yojhd")

[node name="PineTree24" type="Sprite2D" parent="Details"]
position = Vector2(632, 440)
texture = ExtResource("4_yojhd")

[node name="PineTree25" type="Sprite2D" parent="Details"]
position = Vector2(576, 464)
texture = ExtResource("4_yojhd")

[node name="PineTree26" type="Sprite2D" parent="Details"]
position = Vector2(544, 456)
texture = ExtResource("4_yojhd")

[node name="PineTree27" type="Sprite2D" parent="Details"]
position = Vector2(496, 464)
texture = ExtResource("4_yojhd")

[node name="PineTree28" type="Sprite2D" parent="Details"]
position = Vector2(456, 432)
texture = ExtResource("4_yojhd")

[node name="PineTree29" type="Sprite2D" parent="Details"]
position = Vector2(440, 456)
texture = ExtResource("4_yojhd")

[node name="PineTree30" type="Sprite2D" parent="Details"]
position = Vector2(416, 440)
texture = ExtResource("4_yojhd")

[node name="PineTree31" type="Sprite2D" parent="Details"]
position = Vector2(384, 464)
texture = ExtResource("4_yojhd")

[node name="PineTree32" type="Sprite2D" parent="Details"]
position = Vector2(344, 456)
texture = ExtResource("4_yojhd")

[node name="PineTree33" type="Sprite2D" parent="Details"]
position = Vector2(304, 464)
texture = ExtResource("4_yojhd")

[node name="PineTree34" type="Sprite2D" parent="Details"]
position = Vector2(272, 456)
texture = ExtResource("4_yojhd")

[node name="PineTree15" type="Sprite2D" parent="Details"]
position = Vector2(489, 265)
texture = ExtResource("4_yojhd")

[node name="ColorRect" type="TextureRect" parent="."]
offset_top = 256.0
offset_right = 768.0
offset_bottom = 384.0
texture = SubResource("GradientTexture2D_u2cwq")

[node name="ColorRect4" type="TextureRect" parent="."]
offset_top = 384.0
offset_right = 768.0
offset_bottom = 512.0
texture = SubResource("GradientTexture2D_u2cwq")
flip_v = true

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 768.0
offset_bottom = 256.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_top = 512.0
offset_right = 768.0
offset_bottom = 768.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 256.0
offset_top = 200.0
offset_right = 512.0
offset_bottom = 256.0
text = "You Escaped!"
label_settings = SubResource("LabelSettings_18qa3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleScreenButton" type="Button" parent="."]
offset_left = 256.0
offset_top = 512.0
offset_right = 512.0
offset_bottom = 576.0
text = "Return to Title"

[node name="CutsceneDeer" type="AnimatedSprite2D" parent="."]
position = Vector2(-24, 376)
sprite_frames = ExtResource("5_tqa8g")
animation = &"IDLE_EAST"
autoplay = "IDLE_EAST"
